# SparseSim

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
cython/: sparse_sim.c  sparse_sim.pyx
fermion/: fermion.py  hamiltonian.py  nuclear.py  projector.py  qiskit_wrapper.py  rdm.py
include/: pauli.h  wavefunction.h
old/: core.pyx  fermionic.pyi  fermionic.pyx
sparse_sim/: __init__.py  setup.py  sparse_sim.pyi
sparse_sim/cython/: sparse_sim.pyx
sparse_sim/fermion/: fermion.py  hamiltonian.py  projector.py  qiskit_wrapper.py  rdm.py
sparse_sim/src/: test_wavefunction.c
src/: pauli.c  test_pauli.c  test_wavefunction.c  wavefunction.c
src/sparse_sim/: __init__.py
src/sparse_sim/cython/: core.c  core.pyi  core.pyx  density_matrix.c  density_matrix.pxd  density_matrix.pyi  density_matrix.pyx  pauli.c  pauli.pxd  pauli.pyi  pauli.pyx  wavefunction.c  wavefunction.pxd  wavefunction.pyi  wavefunction.pyx
src/sparse_sim/fermion/: fermion.py  nuclear.py  projector.py  qiskit_wrapper.py  rdm.py
src/sparse_sim/include/: density_matrix.h  fermionic.h  pauli.h  wavefunction.h
src/sparse_sim/src/: Makefile  density_matrix.c  fermionic.c  pauli.c  test_density_matrix.c  test_fermionic.c  test_pauli.c  test_wavefunction.c  wavefunction.c
tests/: test_density_matrix.py  test_fermion.py  test_hamiltonian.py  test_nuclear.py  test_pauli.py  test_projector.py  test_qiskit_wrapper.py  test_rdm.py  test_wavefunction.py
