[project]
name = "sparse-sim"
version = "0.1.0"
requires-python = ">=3.9,<3.14"
dependencies = [
    "qiskit>=1.3,<2",
    "qiskit-aer>=0.17.1",
    "numpy>=2.3.0",
    "matplotlib>=3.10.3",
    "qiskit_nature>=0.7.2",
    "qiskit_ibm_runtime>=0.40.1",
    "pyscf>=2.9.0",
    "mthree>=3.0.0",
    "scipy>=1.16.2"
]

[project.optional-dependencies]
dev = ["cython>=3.0", "build", "wheel"]

[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sparse_sim"]